package strategies.state.implementation_02;

public abstract class Block {

    public abstract void interact(Context context);
}